...
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            tools:text="@string/empty_no_car_cta"/>
    </LinearLayout>

    <com.google.android.material.floatingactionbutton.FloatingActionButton
        android:id="@+id/dashboard_fab"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="bottom|end"
        android:layout_margin="16dp"
        android:contentDescription="@string/fab_log_charge"
        android:src="@drawable/ic_add_24"/>
...
